common/force-app/main/default/objects/Email_Content__c/Email_Content__c.object-meta.xml
<CustomObject>
    <label>Email Content</label>
    <nameField>
        <label>Email Content Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Email Content&apos;s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>