common/force-app/main/default/objects/Email_Content__c/fields/Body_Content__c.field-meta.xml
<CustomField>
    <fullName>Body_Content__c</fullName>
    <label>Body Content</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>