common/force-app/main/default/objects/Email_Content__c/fields/Email_Type__c.field-meta.xml
<CustomField>
    <fullName>Email_Type__c</fullName>
    <label>Email Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EOI Launch</fullName>
            </value>
            <value>
                <fullName>Raise Launch</fullName>
            </value>
            <value>
                <fullName>Raise Closing Soon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>