common/force-app/main/default/objects/Email_Content__c/fields/Preheader__c.field-meta.xml
<CustomField>
    <fullName>Preheader__c</fullName>
    <label>Preheader</label>
    <length>255</length>
    <type>Text</type>
</CustomField>