common/force-app/main/default/objects/Email_Content__c/fields/Raise__c.field-meta.xml
<CustomField>
    <fullName>Raise__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Raise</label>
    <referenceTo>Raise__c</referenceTo>
    <relationshipLabel>Email Content&apos;s</relationshipLabel>
    <relationshipName>Email_Content_s</relationshipName>
    <type>Lookup</type>
</CustomField>