common/force-app/main/default/objects/Email_Content__c/fields/Target_Audience__c.field-meta.xml
<CustomField>
    <fullName>Target_Audience__c</fullName>
    <label>Target Audience</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All Wholesale</fullName>
            </value>
            <value>
                <fullName>All Retail</fullName>
            </value>
            <value>
                <fullName>EOI Leads</fullName>
            </value>
            <value>
                <fullName>Open Opportunities</fullName>
            </value>
            <value>
                <fullName>High RFM - Wholesale</fullName>
            </value>
            <value>
                <fullName>High RFM - Retail</fullName>
            </value>
            <value>
                <fullName>High RFL - Wholesale</fullName>
            </value>
            <value>
                <fullName>High RFL - Retail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>